2009-04-01	Mike Massonnet
Set long URLs to 120 characters at least

	- panel-plugin/xfce4-clipman-actions.xml.in:
		Change the minimum size of long URLs from 80 to 120

2009-04-01	Mike Massonnet
Update the strings, yet again

2009-04-01	Mike Massonnet
Update the strings

2009-04-01	Mike Massonnet
April April I restore the actions

	- panel-plugin/collector.c(cb_clipboard_owner_change):
		I broked the actions earlier, fixed now.
	- panel-plugin/xfce4-clipman-actions.xml.in:
		New action for long URLs with a command to send the link to TinyURL

2009-03-31	Mike Massonnet
Set sensitivity of OK button in action dialog

	- panel-plugin/panel-plugin.c(panel_plugin_configure):
		Put the action dialog in the same window group as the settings dialog
		to respect its modal state.
	- panel-plugin/panel-plugin.c(panel_plugin_configure):
		Connect action-name, regex, and buttons add-command/delete-command to
		the new callback cb_set_action_dialog_button_ok to set automatically
		the sensitivity of the OK button in the action dialog.
	- panel-plugin/panel-plugin.c(cb_actions_row_activated):
		Set the entry texts after the commands in the treeview so it
		updates the OK button sensitivity via the entry text changes.
	- panel-plugin/panel-plugin.c(cb_add_command):
		Fix the condition to add a new command and do the same check in
		cb_refresh_command.
	- panel-plugin/panel-plugin.c(cb_set_action_dialog_button_ok):
		Verify that there is a command-name, a valid regex, and at least one
		command to set the OK button sensitive, otherwise not.

2009-03-31	Mike Massonnet
Make Clipman the owner of the clipboard contents

	- panel-plugin/collector.c:
		Rename priv->restoring to priv->internal_change.  Drop function
		_clipman_collector_restore_clipboard in favor of making Clipman
		automatically the owner of the clipboard contents.  This doesn't work
		for the primary clipboard as it would destroy the selection under hand